# calc_posterior_distribution

./: CMakeLists.txt  README.md  compare_finish_prob.ipynb  compare_posterior_distribution.ipynb  finish_prob.ipynb  install.sh  requirements.txt
.github/workflows/: ci.yaml
scripts/: comparison_posterior_distribution.ipynb  comparison_posterior_distribution.py  finish_prob.ipynb  finish_prob.py  posterior_distribution.py
src/: prob.cpp
